--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <img src="logo dapoer niswah.jpg"width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
         
       <div>
-       <div id="brand-name" class="font-display" style="font-size: 24px; font-weight: 700; color: rgba(255, 171, 3, 0.7); line-height: 1;">
+       <div id="brand-name" class="font-display" style="font-size: 24px; font-weight: 700; color: rgba(3, 255, 7, 0.7); line-height: 1;">
         Dapoer Niswah
        </div>
-       <div id="tagline" style="font-size: 11px; color: rgba(255, 171, 3, 0.7); letter-spacing: 2px;">
+       <div id="tagline" style="font-size: 11px; color: rgba(3, 255, 7, 0.7); letter-spacing: 2px;">
         JAMU TRADISIONAL
        </div>
       </div>
      </div>
-     <div style="display: flex; gap: 40px; align-items: center;"><a href="logo dapoer niswah.jpg" style="color: rgba(255, 171, 3, 0.7); text-decoration: none; font-weight: 500; transition: color 0.3s;">Produk</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQNXhVs95cjEwKTh-1J_beCrCBJlFEYccZZNRPbF-ta3g6mA/viewform" style="color: rgba(255, 171, 3, 0.7); text-decoration: none; font-weight: 500; transition: color 0.3s;">Testimoni</a> <a href="https://wa.me/6285370473784?text=Halo%20Dapoer%20Niswah%2C%20saya%20ingin%20pesan%20jamu." class="btn-primary" style="padding: 12px 28px;">Hubungi</a>
+     <div style="display: flex; gap: 40px; align-items: center;"><a href="logo dapoer niswah.jpg" style="color:  rgba(3, 255, 7, 0.7);; text-decoration: none; font-weight: 500; transition: color 0.3s;">Produk</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQNXhVs95cjEwKTh-1J_beCrCBJlFEYccZZNRPbF-ta3g6mA/viewform" style="color: rgba(3, 255, 7, 0.7); text-decoration: none; font-weight: 500; transition: color 0.3s;">Testimoni</a> <a href="https://wa.me/6285370473784?text=Halo%20Dapoer%20Niswah%2C%20saya%20ingin%20pesan%20jamu." class="btn-primary" style="padding: 12px 28px;">Hubungi</a>
      </div>
     </div>
    </nav><!-- Hero Section -->
@@ -139,7 +139,7 @@
 
        <!-- Product 4 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
-       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fcd34d 100%);">
+       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fc4de5 100%);">
         <img src="Temulawak.png" alt="Gambar temulawak jahe dengan akar temulawak dan jahe alami dalam bentuk racikan tradisional" />
          </text>
         </svg>
@@ -154,7 +154,7 @@
 
        <!-- Product 5 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
-       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fcd34d 100%);">
+       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #4da7fc 100%);">
        <img src="beras kencur.jpg" alt="Ilustrasi paket beras kencur dengan tekstur beras dan kencur segar dalam kemasan alami" />
          </text>
         </svg>
@@ -169,7 +169,7 @@
 
        <!-- Product 6 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
-       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fcd34d 100%);">
+       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #704dfc 100%);">
         <img src="Manjakani.jpg" alt="Ilustrasi manjakani dengan buah hijau segar yang digunakan dalam obat pencegahan kehamilan alami" />
          </text>
         </svg>
@@ -184,7 +184,7 @@
 
        <!-- Product 7 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
-       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fcd34d 100%);">
+       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #1fac50 100%);">
         <img src="pati kunyit.jpg" alt="Ilustrasi obat herbal Wasir" />
          </text>
         </svg>
@@ -199,7 +199,7 @@
 
        <!-- Product 8 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
-       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fcd34d 100%);">
+       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #4db6fc 100%);">
        <img src="JM.jpg" alt="Ilustrasi jahe merah segar dengan potongan jahe berwarna merah intens sebagai rempah tradisional yang menyehatkan" />
          </text>
         </svg>
@@ -214,7 +214,7 @@
 
        <!-- Product 9 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
-       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fcd34d 100%);">
+       <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #fc4d5c 100%);">
         <img src="CKS.jpg" alt="Illustrasi botol jamu kunyit asam dengan bahan kunyit dan asam jawa segar dalam desain tradisional Indonesia" />
          </text>
         </svg>
@@ -283,12 +283,7 @@
      <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 60px; margin-bottom: 60px;">
       <div>
        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-        <svg width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#footer-logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
-          <lineargradient id="footer-logo-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
-           <stop offset="0%" style="stop-color:#2dd4bf" />
-           <stop offset="100%" style="stop-color:#f59e0b" />
-          </lineargradient>
-         </defs>
+        <img src="logo dapoer niswah.jpg" width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#footer-logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
         </svg><span class="font-display" style="font-size: 24px; font-weight: 700;">Dapoer Niswah</span>
        </div>
        <p id="footer-about" style="color: rgba(255,255,255,0.7); line-height: 1.7; margin-bottom: 24px;">Dapoer Niswah menghadirkan jamu tradisional dalam kemasan modern untuk kesehatan keluarga Indonesia.</p>
@@ -322,9 +317,6 @@
         </div>
        </div>
       </div>
-     </div>
-     <div style="border-top: 1px solid rgba(255,255,255,0.1); padding-top: 32px; text-align: center;">
-      <p style="color: rgba(255,255,255,0.5); font-size: 14px;">© 2024 Dapoer Niswah. All rights reserved. Made with ❤️ for healthy living.</p>
      </div>
     </div>
    </footer>
