--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
        <!-- Product 8 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.2s;">
        <div class="product-image" style="background: linear-gradient(135deg, #fef3c7 0%, #4db6fc 100%);">
-       <img src="JM.jpg" alt="Ilustrasi jahe merah segar dengan potongan jahe berwarna merah intens sebagai rempah tradisional yang menyehatkan" />
+       <img src="CJM.jpg" alt="Ilustrasi jahe merah segar dengan potongan jahe berwarna merah intens sebagai rempah tradisional yang menyehatkan" />
          </text>
         </svg>
        </div>
@@ -608,3 +608,4 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a6fdc9ac30b8194',t:'MTc2NDU2MzU1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
