--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        </div>
       </div>
      </div>
-     <div style="display: flex; gap: 40px; align-items: center;"><a href="logo dapoer niswah.jpg" style="color:  rgba(3, 255, 7, 0.7);; text-decoration: none; font-weight: 500; transition: color 0.3s;">Produk</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQNXhVs95cjEwKTh-1J_beCrCBJlFEYccZZNRPbF-ta3g6mA/viewform" style="color: rgba(3, 255, 7, 0.7); text-decoration: none; font-weight: 500; transition: color 0.3s;">Testimoni</a> <a href="https://wa.me/6285370473784?text=Halo%20Dapoer%20Niswah%2C%20saya%20ingin%20pesan%20jamu." class="btn-primary" style="padding: 12px 28px;">Hubungi</a>
+     <div style="display: flex; gap: 40px; align-items: center;"><a href="#products" style="color:  rgba(3, 255, 7, 0.7);; text-decoration: none; font-weight: 500; transition: color 0.3s;">Produk</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQNXhVs95cjEwKTh-1J_beCrCBJlFEYccZZNRPbF-ta3g6mA/viewform" style="color: rgba(3, 255, 7, 0.7); text-decoration: none; font-weight: 500; transition: color 0.3s;">Testimoni</a> <a href="https://wa.me/6285370473784?text=Halo%20Dapoer%20Niswah%2C%20saya%20ingin%20pesan%20jamu." class="btn-primary" style="padding: 12px 28px;">Hubungi</a>
      </div>
     </div>
    </nav><!-- Hero Section -->
@@ -608,4 +608,3 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a6fdc9ac30b8194',t:'MTc2NDU2MzU1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
-
