--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!-- Product 2 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.1s;">
        <div class="product-image" style="background: linear-gradient(135deg, #d1fae5 0%, #a7f3d0 100%);">
-       <img src="Kunyit asam.jpg" alt="Illustrasi botol jamu kunyit asam dengan bahan kunyit dan asam jawa segar dalam desain tradisional Indonesia" />
+       <img src="Kunyit Asam.png" alt="Illustrasi botol jamu kunyit asam dengan bahan kunyit dan asam jawa segar dalam desain tradisional Indonesia" />
          </text>
         </svg>
        </div>
@@ -608,3 +608,4 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a6fdc9ac30b8194',t:'MTc2NDU2MzU1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
