--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Dapoer Niswah - Jamu Tradisional Modern</title>
   <script src="/_sdk/element_sdk.js"></script>
    <!-- Favicon (opsional) -->
-  <link rel="icon" href="logo dapoer niswah.jpg" type="image/png">
+  <link rel="icon" href="logo_dapoer_niswah-removebg-preview.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&amp;family=Inter:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
  </head>
  <body>
@@ -15,7 +15,7 @@
    <nav class="navbar">
     <div style="max-width: 1280px; margin: 0 auto; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center;">
      <div style="display: flex; align-items: center; gap: 12px;">
-      <img src="logo dapoer niswah.jpg"width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
+      <img src="logo_dapoer_niswah-removebg-preview.png"width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
         
       <div>
        <div id="brand-name" class="font-display" style="font-size: 24px; font-weight: 700; color: rgba(3, 255, 7, 0.7); line-height: 1;">
@@ -47,7 +47,7 @@
       <div class="animate-fade-in delay-300" style="position: relative;">
        <div style="position: absolute; width: 100%; height: 100%; background: radial-gradient(circle, rgba(45,212,191,0.2) 0%, transparent 70%); border-radius: 50%;"></div>
        <div class="animate-float">
-        <img src="logo dapoer niswah.jpg" width="100%" height="500" viewbox="0 0 400 500" ><!-- Main Bottle --> <defs>
+        <img src="logo_dapoer_niswah-removebg-preview.png" width="100%" height="500" viewbox="0 0 400 500" ><!-- Main Bottle --> <defs>
        </div>
       </div>
      </div>
@@ -109,7 +109,7 @@
       <!-- Product 2 -->
       <div class="product-card scroll-reveal" style="animation-delay: 0.1s;">
        <div class="product-image" style="background: linear-gradient(135deg, #d1fae5 0%, #a7f3d0 100%);">
-       <img src="Kunyit Asam.png" alt="Illustrasi botol jamu kunyit asam dengan bahan kunyit dan asam jawa segar dalam desain tradisional Indonesia" />
+       <img src="Kunyit asam.jpg" alt="Illustrasi botol jamu kunyit asam dengan bahan kunyit dan asam jawa segar dalam desain tradisional Indonesia" />
          </text>
         </svg>
        </div>
@@ -608,4 +608,3 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a6fdc9ac30b8194',t:'MTc2NDU2MzU1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
-
