--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </svg>
        </div>
        <div style="padding: 32px;">
-        <h3 id="product-2-name" class="font-display" style="font-size: 28px; margin-bottom: 12px; color: #0a0e27;">Beras Kencur</h3>
+        <h3 id="product-2-name" class="font-display" style="font-size: 28px; margin-bottom: 12px; color: #0a0e27;">Kunyit Asam</h3>
         <p id="product-2-desc" style="color: #6b7280; margin-bottom: 24px; line-height: 1.7;">Untuk Kesehatan Kewanitaan dan Melancarkan haid</p>
         <div style="display: flex; justify-content: space-between; align-items: center;"><span id="product-2-price" class="font-display" style="font-size: 32px; font-weight: 700; color: #0a0e27;">Harga Mulai dari 8K</span> <button class="btn-accent">Pesan</button>
         </div>
@@ -608,3 +608,4 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a6fdc9ac30b8194',t:'MTc2NDU2MzU1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
