--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
      <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 60px; margin-bottom: 60px;">
       <div>
        <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-        <img src="logo dapoer niswah.jpg" width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#footer-logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
+        <img src="logo_dapoer_niswah-removebg-preview.png" width="40" height="40" viewbox="0 0 40 40"><circle cx="20" cy="20" r="18" fill="url(#footer-logo-gradient)" /> <path d="M15 18 L20 13 L25 18 M20 13 L20 27" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round" /> <defs>
         </svg><span class="font-display" style="font-size: 24px; font-weight: 700;">Dapoer Niswah</span>
        </div>
        <p id="footer-about" style="color: rgba(255,255,255,0.7); line-height: 1.7; margin-bottom: 24px;">Dapoer Niswah menghadirkan jamu tradisional dalam kemasan modern untuk kesehatan keluarga Indonesia.</p>
@@ -608,4 +608,3 @@
   </script>
  <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a6fdc9ac30b8194',t:'MTc2NDU2MzU1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
-
